syntax = "proto3";
package carkot;

message SonarRequest {
    repeated int32 angles = 1;

}

message SonarResponse {
    repeated int32 distances = 1;
}
